force-app/main/default/objects/Contact/fields/Projected_Graduation_Year__c.field-meta.xml
<CustomField>
    <fullName>Projected_Graduation_Year__c</fullName>
    <formula>TEXT(YEAR( Expected_Graduation_date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Projected Graduation Year</label>
    <type>Text</type>
</CustomField>