force-app/main/default/objects/Contact/fields/qualtrics__Informed_Consent__c.field-meta.xml
<CustomField>
    <fullName>qualtrics__Informed_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is populated as a result of the Qualtrics Informed Consent Quick Start Survey</description>
    <label>Informed Consent</label>
    <type>Checkbox</type>
</CustomField>