force-app/main/default/objects/Contact/fields/qualtrics__Informed_Consent_Date__c.field-meta.xml
<CustomField>
    <fullName>qualtrics__Informed_Consent_Date__c</fullName>
    <description>This date is populated when a contact grants Informed Consent via Qualtrics Informed Consent Quick Start Survey</description>
    <label>Informed Consent Date</label>
    <type>Date</type>
</CustomField>