force-app/main/default/objects/Contact/fields/qualtrics__Net_Promoter_Score__c.field-meta.xml
<CustomField>
    <fullName>qualtrics__Net_Promoter_Score__c</fullName>
    <label>Net Promoter Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>