force-app/main/default/objects/Contact/fields/Receive_Newsletter__c.field-meta.xml
<CustomField>
    <fullName>Receive_Newsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Receive Newsletter?</label>
    <type>Checkbox</type>
</CustomField>