force-app/main/default/objects/Contact/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If contact has agreed to be a Reference for ASA</description>
    <label>Reference</label>
    <type>Checkbox</type>
</CustomField>