force-app/main/default/objects/Contact/fields/Referred_by__c.field-meta.xml
<CustomField>
    <fullName>Referred_by__c</fullName>
    <label>Referred by</label>
    <length>100</length>
    <type>Text</type>
</CustomField>