force-app/main/default/objects/Contact/fields/Resident_Alien_Resident_ID__c.field-meta.xml
<CustomField>
    <fullName>Resident_Alien_Resident_ID__c</fullName>
    <label>Permanent Resident ID</label>
    <length>9</length>
    <maskChar>X</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>