force-app/main/default/objects/Contact/fields/RETAIN_CONTACT__c.field-meta.xml
<CustomField>
    <fullName>RETAIN_CONTACT__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if you want to keep this Contact record.  All Contacts without a checkmark will be DELETED as part of the cleanup project.</inlineHelpText>
    <label>RETAIN CONTACT</label>
    <type>Checkbox</type>
</CustomField>