force-app/main/default/objects/Contact/fields/Role_to_ASA__c.field-meta.xml
<CustomField>
    <fullName>Role_to_ASA__c</fullName>
    <label>Role to ASA</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Admissions Contact</fullName>
            </value>
            <value>
                <fullName>Bursar Contact</fullName>
            </value>
            <value>
                <fullName>Call Center FIN AID contact</fullName>
            </value>
            <value>
                <fullName>Champion</fullName>
            </value>
            <value>
                <fullName>Contract Contact</fullName>
            </value>
            <value>
                <fullName>Decision Maker</fullName>
            </value>
            <value>
                <fullName>Default Manager</fullName>
            </value>
            <value>
                <fullName>Influencer</fullName>
            </value>
            <value>
                <fullName>Invoice Contact</fullName>
            </value>
            <value>
                <fullName>Operational</fullName>
            </value>
            <value>
                <fullName>Print Address</fullName>
            </value>
            <value>
                <fullName>Servicer Access Official</fullName>
            </value>
            <value>
                <fullName>Speaker</fullName>
            </value>
            <value>
                <fullName>Strategic Partner</fullName>
            </value>
            <value>
                <fullName>Technical Contact</fullName>
            </value>
            <value>
                <fullName>TRIO Member</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>