force-app/main/default/objects/Contact/fields/SALT_Ambassador_Advisor__c.field-meta.xml
<CustomField>
    <fullName>SALT_Ambassador_Advisor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SALT Ambassador Advisor</label>
    <type>Checkbox</type>
</CustomField>