force-app/main/default/objects/Contact/fields/SALT_Ambassador_Newsletter__c.field-meta.xml
<CustomField>
    <fullName>SALT_Ambassador_Newsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SALT Ambassador Newsletter</label>
    <type>Checkbox</type>
</CustomField>