force-app/main/default/objects/Contact/fields/SALT_Newsletter__c.field-meta.xml
<CustomField>
    <fullName>SALT_Newsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FORMERLY called the School Newsletter field.  When the two newsletters were combined, this field was merged with the Campus Engagement Newsletter field recipients - and then the CEN field was deleted on 1/26/15.</description>
    <inlineHelpText>If this contact should receive the SALT newsletter please check this box.</inlineHelpText>
    <label>SALT Newsletter</label>
    <type>Checkbox</type>
</CustomField>