force-app/main/default/objects/Contact/fields/SALT_Store_User__c.field-meta.xml
<CustomField>
    <fullName>SALT_Store_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates that the contact is a user in the SALT Store.</description>
    <inlineHelpText>This field indicates that the contact is a user in the SALT Store.</inlineHelpText>
    <label>SALT Store User</label>
    <type>Checkbox</type>
</CustomField>