force-app/main/default/objects/Contact/fields/SALT_Team__c.field-meta.xml
<CustomField>
    <fullName>SALT_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box for SALT implementation team/primary contacts.</inlineHelpText>
    <label>SALT Team</label>
    <type>Checkbox</type>
</CustomField>