force-app/main/default/objects/Contact/fields/School_Guidance_Counselor__c.field-meta.xml
<CustomField>
    <fullName>School_Guidance_Counselor__c</fullName>
    <label>School Guidance Counselor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>