force-app/main/default/objects/Contact/fields/Secondary_School_at_Intake_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Secondary_School_at_Intake_Picklist__c</fullName>
    <label>Secondary School Talent Search</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Talent_Search_Target_Schools</valueSetName>
    </valueSet>
</CustomField>