force-app/main/default/objects/Contact/fields/Secondary_School_Other__c.field-meta.xml
<CustomField>
    <fullName>Secondary_School_Other__c</fullName>
    <label>Secondary School Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>