force-app/main/default/objects/Contact/fields/Signature_Data_is_for_Service_Year_EOC__c.field-meta.xml
<CustomField>
    <fullName>Signature_Data_is_for_Service_Year_EOC__c</fullName>
    <inlineHelpText>Parent and Client Signature fields are set each year. Use this field to indicate the latest service year to which the values apply (e.g. if fields indicate signature was received for 2017, and it&#39;s 2019, then signature fields need to be re-set for 2019)</inlineHelpText>
    <label>Signature Data is for Service Year (EOC)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2018-2019</fullName>
            </value>
            <value>
                <fullName>2019-2020</fullName>
            </value>
            <value>
                <fullName>2020-2021</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>