force-app/main/default/objects/Contact/fields/Sortable_Title__c.field-meta.xml
<CustomField>
    <fullName>Sortable_Title__c</fullName>
    <description>What is the title equal to in a heirarchy.</description>
    <label>Sortable Title</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Admin/Exec. Assistant</fullName>
            </value>
            <value>
                <fullName>Advisor</fullName>
            </value>
            <value>
                <fullName>ASA Board Of Directors</fullName>
            </value>
            <value>
                <fullName>ASA Business Sponsor</fullName>
            </value>
            <value>
                <fullName>ASA Employee</fullName>
            </value>
            <value>
                <fullName>Assistant Dean</fullName>
            </value>
            <value>
                <fullName>Assistant Director</fullName>
            </value>
            <value>
                <fullName>Assistant Manager</fullName>
            </value>
            <value>
                <fullName>Associate Dean</fullName>
            </value>
            <value>
                <fullName>Associate Director</fullName>
            </value>
            <value>
                <fullName>Associate Provost</fullName>
            </value>
            <value>
                <fullName>Associate Vice President</fullName>
            </value>
            <value>
                <fullName>Bursar</fullName>
            </value>
            <value>
                <fullName>Career Services</fullName>
            </value>
            <value>
                <fullName>CEO</fullName>
            </value>
            <value>
                <fullName>Chair</fullName>
            </value>
            <value>
                <fullName>Chancelor</fullName>
            </value>
            <value>
                <fullName>Chief Financial Officer</fullName>
            </value>
            <value>
                <fullName>Chief Operating Officer</fullName>
            </value>
            <value>
                <fullName>CIO</fullName>
            </value>
            <value>
                <fullName>Clerk</fullName>
            </value>
            <value>
                <fullName>Client Manager</fullName>
            </value>
            <value>
                <fullName>Client Services</fullName>
            </value>
            <value>
                <fullName>Comptroller</fullName>
            </value>
            <value>
                <fullName>Controller</fullName>
            </value>
            <value>
                <fullName>Coordinator</fullName>
            </value>
            <value>
                <fullName>Counselor</fullName>
            </value>
            <value>
                <fullName>Dean</fullName>
            </value>
            <value>
                <fullName>Default Manager</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>