force-app/main/default/objects/Contact/fields/Sponsor_Newsletter__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Newsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this contact should receive the sponsor newsletter please check.</description>
    <inlineHelpText>If this contact should receive the sponsor newsletter please check.</inlineHelpText>
    <label>Sponsor Newsletter</label>
    <type>Checkbox</type>
</CustomField>