force-app/main/default/objects/Contact/fields/SSN_Generated_for_MassEdCo__c.field-meta.xml
<CustomField>
    <fullName>SSN_Generated_for_MassEdCo__c</fullName>
    <label>SSN Generated for MassEdCo</label>
    <length>9</length>
    <type>Text</type>
</CustomField>