force-app/main/default/objects/Contact/fields/Strategic_Services__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Services__c</fullName>
    <label>Strategic Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Endorsed</fullName>
            </value>
            <value>
                <fullName>Key Contact</fullName>
            </value>
            <value>
                <fullName>Personal Contact</fullName>
            </value>
            <value>
                <fullName>Receive Ongoing Communication</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>