force-app/main/default/objects/Contact/fields/Student_Name__c.field-meta.xml
<CustomField>
    <fullName>Student_Name__c</fullName>
    <formula>LastName + &quot;, &quot; + FirstName + &quot; &quot; + Middle_Name__c + &quot; (&quot; + Birth_Year__c + &quot;)&quot;</formula>
    <label>Student Name</label>
    <type>Text</type>
</CustomField>