force-app/main/default/objects/Contact/fields/Student_Status__c.field-meta.xml
<CustomField>
    <fullName>Student_Status__c</fullName>
    <label>Student Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Currently Attending</fullName>
            </value>
            <value>
                <fullName>Middle School</fullName>
            </value>
            <value>
                <fullName>High School</fullName>
            </value>
            <value>
                <fullName>College Student</fullName>
            </value>
            <value>
                <fullName>Graduate Student</fullName>
            </value>
            <value>
                <fullName>ESL Student</fullName>
            </value>
            <value>
                <fullName>GED/HiSET Student</fullName>
            </value>
            <value>
                <fullName>Vocation/Training Student</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>