force-app/main/default/objects/Contact/fields/Target_Office__c.field-meta.xml
<CustomField>
    <fullName>Target_Office__c</fullName>
    <label>Target Office</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Academic</fullName>
            </value>
            <value>
                <fullName>Admissions Office</fullName>
            </value>
            <value>
                <fullName>Advancement Office</fullName>
            </value>
            <value>
                <fullName>Alumni Office</fullName>
            </value>
            <value>
                <fullName>Business Office</fullName>
            </value>
            <value>
                <fullName>Career Services Office</fullName>
            </value>
            <value>
                <fullName>Enrollment Management</fullName>
            </value>
            <value>
                <fullName>Financial Aid Office</fullName>
            </value>
            <value>
                <fullName>President&#39;s Office</fullName>
            </value>
            <value>
                <fullName>Registrar&#39;s Office</fullName>
            </value>
            <value>
                <fullName>Student Life Office</fullName>
            </value>
            <value>
                <fullName>Veterans Affairs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>