force-app/main/default/objects/Contact/fields/Text_ED_Sign_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Text_ED_Sign_Up_Date__c</fullName>
    <label>Text ED Sign Up Date (BPL only)</label>
    <type>Date</type>
</CustomField>