force-app/main/default/objects/Contact/fields/TTY_TDD_Phone__c.field-meta.xml
<CustomField>
    <fullName>TTY_TDD_Phone__c</fullName>
    <label>TTY/TDD Phone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>