force-app/main/default/objects/Contact/fields/Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Unique_ID__c</fullName>
    <formula>LastName &amp; FirstName &amp; BirthDate_Text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique ID</label>
    <type>Text</type>
</CustomField>