force-app/main/default/objects/Contact/fields/Web_Page__c.field-meta.xml
<CustomField>
    <fullName>Web_Page__c</fullName>
    <label>Web Page</label>
    <type>Url</type>
</CustomField>