force-app/main/default/objects/Contact/recordTypes/ASAEmployees.recordType-meta.xml
<RecordType>
    <fullName>ASAEmployees</fullName>
    <active>true</active>
    <label>ASA Employees</label>
</RecordType>