force-app/main/default/objects/Contact/recordTypes/College_UniversityPresident.recordType-meta.xml
<RecordType>
    <fullName>College_UniversityPresident</fullName>
    <active>true</active>
    <description>College and University Presidents</description>
    <label>College_University President</label>
</RecordType>