force-app/main/default/objects/Contact/recordTypes/Employee_Client.recordType-meta.xml
<RecordType>
    <fullName>Employee_Client</fullName>
    <active>true</active>
    <description>Use for the EMPLOYEE contact, not visible to the general public.</description>
    <label>Employee Client</label>
</RecordType>