force-app/main/default/objects/Contact/recordTypes/Employer_Mkt.recordType-meta.xml
<RecordType>
    <fullName>Employer_Mkt</fullName>
    <active>true</active>
    <description>Used for the Counseling Services contacts</description>
    <label>Counseling Services Contact</label>
</RecordType>