force-app/main/default/objects/Contact/recordTypes/ExecutivePrivate.recordType-meta.xml
<RecordType>
    <fullName>ExecutivePrivate</fullName>
    <active>true</active>
    <description>Executive Contacts Private from everyone but Marketing and Executive/Admins</description>
    <label>Executive - Private</label>
</RecordType>