force-app/main/default/objects/Contact/recordTypes/Foundation.recordType-meta.xml
<RecordType>
    <fullName>Foundation</fullName>
    <active>true</active>
    <label>Foundation</label>
</RecordType>