force-app/main/default/objects/Contact/recordTypes/Grant_Sublease.recordType-meta.xml
<RecordType>
    <fullName>Grant_Sublease</fullName>
    <active>true</active>
    <label>Grant/Sublease</label>
</RecordType>