force-app/main/default/objects/Contact/recordTypes/LegalVendor.recordType-meta.xml
<RecordType>
    <fullName>LegalVendor</fullName>
    <active>true</active>
    <description>Contacts for legal contracts and Vendor</description>
    <label>Legal Vendor</label>
</RecordType>