force-app/main/default/objects/Contact/recordTypes/LegislatorPrivateExecMarketing.recordType-meta.xml
<RecordType>
    <fullName>LegislatorPrivateExecMarketing</fullName>
    <active>true</active>
    <description>Use this record for contacts that only Marketing and/or Executives should see (Legislators)</description>
    <label>Legislator/Private Exec &amp; Marketing</label>
</RecordType>