force-app/main/default/objects/Contact/recordTypes/Lender_Servicer.recordType-meta.xml
<RecordType>
    <fullName>Lender_Servicer</fullName>
    <active>true</active>
    <description>Contact Record for Lender or Servicer Client</description>
    <label>Lender_Servicer</label>
</RecordType>