force-app/main/default/objects/Contact/recordTypes/MarketingVendor.recordType-meta.xml
<RecordType>
    <fullName>MarketingVendor</fullName>
    <active>true</active>
    <description>Vendors that ASA does business with or ASA Empoyee as Business Sponsor</description>
    <label>Marketing Vendor</label>
</RecordType>