force-app/main/default/objects/Contact/recordTypes/SALT_Ambassador.recordType-meta.xml
<RecordType>
    <fullName>SALT_Ambassador</fullName>
    <active>true</active>
    <label>SALT Ambassador</label>
</RecordType>