force-app/main/default/objects/Contact/recordTypes/SALT_Member.recordType-meta.xml
<RecordType>
    <fullName>SALT_Member</fullName>
    <active>true</active>
    <description>This record type is being used as the Pilot Program for Member records</description>
    <label>SALT Member</label>
</RecordType>