force-app/main/default/objects/Contact/recordTypes/SchoolLenderServicer.recordType-meta.xml
<RecordType>
    <fullName>SchoolLenderServicer</fullName>
    <active>true</active>
    <description>External Industry Contact</description>
    <label>School/Lender/Servicer</label>
</RecordType>