force-app/main/default/objects/Contact/recordTypes/Strategic_Partnership.recordType-meta.xml
<RecordType>
    <fullName>Strategic_Partnership</fullName>
    <active>true</active>
    <description>This record type is used for contacts that are at Prospective/Active Strategic Partners</description>
    <label>Strategic Partnership</label>
</RecordType>