force-app/main/default/objects/Contact/recordTypes/SWO_Government.recordType-meta.xml
<RecordType>
    <fullName>SWO_Government</fullName>
    <active>true</active>
    <description>SWO Government Channel - FEDM (Federal Education Debt Management)</description>
    <label>SWO Government</label>
</RecordType>