force-app/main/default/objects/Contact/validationRules/ASA_BPM_Service_Agent_not_Edit_CPS.validationRule-meta.xml
<ValidationRule>
    <fullName>ASA_BPM_Service_Agent_not_Edit_CPS</fullName>
    <active>true</active>
    <description>ASA BPM Service Agent should not be able to edit the CPS contact record.</description>
    <errorConditionFormula>AND(
  not(isnew()),
  $Profile.Name = &#39;ASA - Counseling Services&#39;,
  OR(
    RecordType.Name = &#39;CPS - EOC&#39;,
    RecordType.Name = &#39;CPS - TS&#39;,
    RecordType.Name = &#39;CPS - UB&#39;
  )
)</errorConditionFormula>
    <errorMessage>ASA BPM Service Agent does not have Edit Access of this record</errorMessage>
</ValidationRule>