force-app/main/default/objects/Contact/validationRules/Communications_Requirements.validationRule-meta.xml
<ValidationRule>
    <fullName>Communications_Requirements</fullName>
    <active>false</active>
    <description>This rule checks to be sure that the Prospective/Former Client Comms field is not accessible if the Foreign School Comms &amp;/or F.D.O. &amp;/or Lend Serve fields are checked.</description>
    <errorConditionFormula>AND (OR(
International_School_Communication__c  = true,  Lend_Serv__c = true,

or(
ISPICKVAL(Communications__c, &quot;School&quot;),
ISPICKVAL(Communications__c, &quot;Lender/Servicer&quot;),
ISPICKVAL(Communications__c, &quot;MDHE&quot;)
)

),  Prospective_Former_Customer__c  &lt;&gt; false)</errorConditionFormula>
    <errorMessage>This field cannot be active because the contact record is currently receiving communications from us.</errorMessage>
</ValidationRule>