force-app/main/default/objects/Contact/validationRules/Father_College_Graduation_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Father_College_Graduation_Fields</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL( Is_Father_College_graduate__c , &#39;Yes&#39;) &amp;&amp; ISBLANK( Father_s_college__c )</errorConditionFormula>
    <errorDisplayField>Father_s_college__c</errorDisplayField>
    <errorMessage>Please fill Father&#39;s College name if he is College graduate.</errorMessage>
</ValidationRule>