force-app/main/default/objects/Contact/validationRules/First_Name_on_CPS_Contact_cannot_be_blan.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Name_on_CPS_Contact_cannot_be_blan</fullName>
    <active>true</active>
    <description>The First Name on a CPS Contact Record for EOC, TS or UB cannot be blank.</description>
    <errorConditionFormula>AND( 
OR( RecordType.Name =&quot;CPS - EOC&quot;, 
RecordType.Name =&quot;CPS - TS&quot;, 
RecordType.Name =&quot;CPS - UB&quot;), 
ISBLANK( FirstName ))</errorConditionFormula>
    <errorMessage>First Name cannot be left blank.</errorMessage>
</ValidationRule>