force-app/main/default/objects/Contact/validationRules/Mother_College_Graduation_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Mother_College_Graduation_Fields</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL(Is_Mother_College_graduate__c , &#39;Yes&#39;) &amp;&amp;  ISBLANK(Mother_s_college__c)</errorConditionFormula>
    <errorDisplayField>Mother_s_college__c</errorDisplayField>
    <errorMessage>Please fill Mother&#39;s College name if she is College graduate.</errorMessage>
</ValidationRule>